added rabbitMQ and child/parent processing
